--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "betbro",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsdom": "^16.4.0",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "replace-in-file": "^6.1.0"
-  },
-  "proxy": "localhost://8080",
-  "scripts": {
-    "react-start": "react-scripts start",
-    "start": "concurrently \"npm run build\" \"node server\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "concurrently": "^5.3.0"
-  }
+	"name": "betbro",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.5.0",
+		"@testing-library/user-event": "^7.2.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"jsdom": "^16.4.0",
+		"moment": "^2.27.0",
+		"node-fetch": "^2.6.1",
+		"nodemon": "^2.0.4",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.3",
+		"replace-in-file": "^6.1.0",
+		"styled-components": "^5.2.0"
+	},
+	"proxy": "http://localhost:8080",
+	"scripts": {
+		"react-start": "set PORT=3000 && react-scripts start",
+		"start": "concurrently \"npm run react-start\" \"node server\"",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"concurrently": "^5.3.0"
+	}
 }
