--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"express": "^4.17.1",
 		"jsdom": "^16.4.0",
 		"moment": "^2.27.0",
+		"morgan": "^1.10.0",
 		"node-fetch": "^2.6.1",
 		"nodemon": "^2.0.4",
 		"react": "^16.13.1",
