--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"scripts": {
 		"react-start": "set PORT=3000 && react-scripts start",
 		"start": "concurrently \"npm run react-start\" \"node server\"",
+		"server": "concurrently \"npm run build\" \"node server\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
