updated package.json, reduced grid size by 1

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"name": "betbro",
 	"version": "0.1.0",
 	"private": true,
-	"engine": "12.18.3",
+	"engines": {
+		"node": "12.x"
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
