--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"proxy": "http://localhost:8080",
 	"scripts": {
 		"react-start": "set PORT=3000 && react-scripts start",
-		"start": "concurrently \"npm run build\" \"node server\"",
+		"start": "npm run build && node server",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -46,7 +46,5 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {
-		"concurrently": "^5.3.0"
-	}
+	"devDependencies": {}
 }
