--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"moment": "^2.27.0",
 		"morgan": "^1.10.0",
 		"node-fetch": "^2.6.1",
-		"nodemon": "^2.0.4",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
@@ -46,5 +45,7 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {}
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	}
 }
