--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"jsdom": "^16.4.0",
 		"moment": "^2.27.0",
 		"morgan": "^1.10.0",
+		"node-cache": "^5.1.2",
 		"node-fetch": "^2.6.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
