--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"proxy": "http://localhost:8080",
 	"scripts": {
 		"react-start": "set PORT=3000 && react-scripts start",
-		"start": "npm run build && node server",
+		"start": "node server && npm run build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
