--- a/package.json
+++ b/package.json
@@ -9,24 +9,15 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"jsdom": "^16.4.0",
 		"moment": "^2.27.0",
-		"morgan": "^1.10.0",
-		"node-cache": "^5.1.2",
-		"node-fetch": "^2.6.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
-		"replace-in-file": "^6.1.0",
 		"styled-components": "^5.2.0"
 	},
-	"proxy": "http://localhost:8080",
 	"scripts": {
-		"react-start": "set PORT=3000 && react-scripts start",
-		"start": "node server && npm run build",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -44,16 +35,6 @@
 			"last 1 chrome version",
 			"last 1 firefox version",
 			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.4"
-	},
-	"nodemonConfig": {
-		"ignore": [
-			"/src/components/*",
-			"/src/App.js",
-			"/src/tools"
 		]
 	}
 }
