--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-scripts": "3.4.3",
 		"styled-components": "^5.2.0"
 	},
+	"proxy": "http://localhost:8080",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
