--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"moment": "^2.27.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-google-recaptcha": "^2.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"styled-components": "^5.2.0"
