--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-google-recaptcha": "^2.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-scrollbar": "^0.5.6",
 		"styled-components": "^5.2.0"
 	},
 	"proxy": "http://localhost:8080",
