--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"react-dom": "^16.13.1",
 		"react-google-recaptcha": "^2.1.0",
 		"react-router-dom": "^5.2.0",
+		"react-router-sitemap": "^1.2.0",
 		"react-scripts": "3.4.3",
-		"react-scrollbar": "^0.5.6",
 		"styled-components": "^5.2.0"
 	},
 	"proxy": "http://localhost:8080",
@@ -40,5 +40,12 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.0.0"
 	}
 }
