--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-google-recaptcha": "^2.1.0",
+		"react-helmet": "^6.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-sitemap": "^1.2.0",
 		"react-scripts": "3.4.3",
+		"react-snapshot": "^1.3.0",
 		"styled-components": "^5.2.0"
 	},
 	"proxy": "http://localhost:8080",
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && react-snapshot",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
