--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
-		"formbouncerjs": "^1.4.6",
 		"moment": "^2.27.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -19,6 +18,7 @@
 		"react-router-sitemap": "^1.2.0",
 		"react-scripts": "3.4.3",
 		"react-snapshot": "^1.3.0",
+		"reactjs-popup": "^2.0.4",
 		"styled-components": "^5.2.0"
 	},
 	"proxy": "http://localhost:8080",
