--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-router-sitemap": "^1.2.0",
 		"react-scripts": "3.4.3",
+		"react-select": "^5.2.1",
 		"react-snapshot": "^1.3.0",
 		"reactjs-popup": "^2.0.4",
 		"styled-components": "^5.2.0"
